--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "viem": "^1.7.0",
-    "wagmi": "^1.3.10"
+    "wagmi": "^1.3.10",
+    "zustand": "^4.4.1"
   }
 }
