--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "connectkit": "^1.5.3",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
@@ -23,8 +24,8 @@
     "react-hot-toast": "^2.4.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
-    "viem": "^1.7.0",
-    "wagmi": "^1.3.10",
+    "viem": "^1.10.13",
+    "wagmi": "^1.4.1",
     "zustand": "^4.4.1"
   }
 }
