--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.10",
+    "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
